@@ -65,7 +65,9 @@ class UploadWidget(QtWidgets.QWidget):
             supps.append(rdata[path]["supplement"])
         dataset_dict = upload_dialog.dataset_dict
         # add the entry to the job list
-        self.jobs.add_job(dataset_dict, paths=paths, resource_names=names,
+        self.jobs.add_job(dataset_dict["id"],
+                          paths=paths,
+                          resource_names=names,
                           supplements=supps)
 
 
